<resources>
    <string name="app_name">PADC-Movie Screen Assignment</string>
    <string name="action_settings">Settings</string>
    <string name="cd_iv_poster">Movie poster</string>
    <string name="cd_iv_cancel_star">Remove the tvSeries from favourite</string>
    <string name="lbl_current_popularity">Current Popularity</string>
    <string name="movie_overview">Movie Overview</string>

    <string name="now_playing_movies">Now on Cinema</string>
    <string name="upcoming_movies">Upcoming</string>
    <string name="most_popular_movies">Most Popular</string>

    <string name="msg_generic_no_data">No Data to Display</string>
    <string name="lbl_refresh">Refresh</string>
    <string name="cd_iv_backdrop">Backdrop image of the tvSeries</string>
    <string name="movie_detail_overview">Brash space adventurer Peter Quill (Chris Pratt) finds himself the quarry of relentless bounty hunters after he steals an orb coveted by Ronan, a powerful villain. To evade Ronan, Quill is forced into an uneasy truce with four disparate misfits: gun-toting Rocket Raccoon, treelike-humanoid Groot, enigmatic Gamora, and vengeance-driven Drax the Destroyer. But when he discovers the orb\'s true power and the cosmic threat it poses, Quill must rally his ragtag group to save the universe.</string>
    <string name="lbl_reviews">Reviews</string>
    <string name="cd_iv_trailer_preview">Trailer Privew Image</string>
    <string name="movie_reviews">Like Pixar before it, Marvel Studios has developed a brand that transcends any particular character or franchise. That red rectangle with the white letters has become a stamp of quality, a relative guarantee that the comic-book movie you’re about to see will be worth your time and money. But also like Pixar, Marvel now has to decide how best to extend and expand that brand. Make more sequels to the films we already enjoy? Or try to branch out and invest in new stories, which brings fresh risks?</string>
</resources>
